kagenti-operator/config/network-policy/allow-webhook-traffic.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  labels:
    app.kubernetes.io/name: networkpolicy
    app.kubernetes.io/instance: allow-webhook-traffic
    app.kubernetes.io/component: webhook
    app.kubernetes.io/created-by: kagenti-operator
    app.kubernetes.io/part-of: kagenti-operator
    app.kubernetes.io/managed-by: kustomize
  name: allow-webhook-traffic
  namespace: system
spec:
  podSelector:
    matchLabels:
      control-plane: controller-manager
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          webhooks: enabled
    ports:
    - protocol: TCP
      port: 9443
